# api/routes/test.go
@@ -17,7 +17,7 @@ type TestRoutes struct {
 // Setup Test routes
 func (s TestRoutes) Setup() {
 	s.logger.Info("Setting up routes")
-	api := s.handler.Gin.Group("/api").Use(s.authMiddleware.Handler())
+	api := s.handler.Gin.Group("/api") //.Use(s.authMiddleware.Handler())
 	{
 		api.GET("/test", s.TestController.GetTest)
 		api.GET("/test/:id", s.TestController.GetOneTest)
